# terrapilot

./: .gitignore  LICENSE  Makefile  README.md  bootstrap.sh  config.example.yaml  policy.yaml  pyproject.toml
examples/real-repo/: atlantis-dev.yaml  atlantis-prod.yaml
examples/real-repo/env/dev/hello/: main.tf
examples/real-repo/env/prod/hello/: main.tf
terrapilot/: __init__.py  audit.py  cli.py  config.py  discovery.py  engine.py  github.py  policy.py  runner.py  server.py  slack.py  store.py
tests/: test_e2e.py
tests/fixtures/repo/: atlantis-dev.yaml  atlantis-prod.yaml
tests/fixtures/repo/terraform/aws/dev/us-east-1/dev/dynamodb/example-table/: _backend.tf  main.tf
tests/fixtures/repo/terraform/aws/dev/us-east-1/dev/iam/example-role/: _backend.tf  main.tf
tests/fixtures/repo/terraform/aws/prod/us-east-1/prod/rds/example-db/: _backend.tf  main.tf
tests/fixtures/repo/terraform/aws/prod/us-east-1/prod/s3/example-logs/: _backend.tf  main.tf
