[project]
name = "terrapilot"
version = "0.1.0"
description = "TerraPilot — an AI-native, policy-governed Terraform automation server (MCP). The in-house Atlantis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Platform / DevOps" }]
license = { text = "Proprietary" }
dependencies = [
    "fastmcp>=2.3.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
terrapilot = "terrapilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terrapilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
